fix: light and dark mode anchor tag colors

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,6 +18,7 @@ html {
       --gray: #d9d9d9;
       --background: var(--white);
       --text: var(--black);
+      --links: var(--primary);
     }
 
     &[data-theme='dark'] {
@@ -26,6 +27,7 @@ html {
       --gray: #404040;
       --background: var(--black);
       --text: var(--white);
+      --links: var(--secondary);
     }
 
     color: var(--text);
@@ -115,7 +117,7 @@ html {
     }
 
     a {
-      color: var(--white);
+      color: var(--links);
       font-weight: var(--font-weight-bold);
       font-size: var(--font-size-md);
       &:hover {
